<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onStartMessaging"
        android:text="@string/messaging_start"
        android:textAllCaps="false"/>

    <Button
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onStopMessaging"
        android:text="@string/messaging_stop"
        android:textAllCaps="false"/>

    <Button
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onGetToken"
        android:text="@string/messaging_get_token"
        android:textAllCaps="false"/>

    <Button
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onCreateLocalNotification"
        android:text="@string/messaging_local_notification"
        android:textAllCaps="false"/>

    <LinearLayout android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <EditText android:id="@+id/builder_id"
            android:layout_marginLeft="10dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:hint="builder id"/>

        <Button
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_weight="3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onAddNotificationBuilder"
            android:text="@string/add_notification_builder"
            android:textAllCaps="false"/>


    </LinearLayout>


</LinearLayout>