<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    tools:context=".tacstorage.StorageActivity"
    android:layout_height="match_parent">

    <Button android:id="@+id/coin_payment"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="uploadFile"
        android:text="@string/storage_upload_file"
        android:textAllCaps="false"/>

    <Button android:id="@+id/item_payment"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="downloadFile"
        android:text="@string/storage_download_file"
        android:textAllCaps="false"/>

    <Button android:id="@+id/subscription_payment"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="deleteFile"
        android:text="@string/storage_delete_file"
        android:textAllCaps="false"/>

</LinearLayout>